--- a/pom.xml
+++ b/pom.xml
@@ -75,10 +75,10 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cdap.version>6.9.0-SNAPSHOT</cdap.version>
-    <cdap.plugin.version>2.11.0-SNAPSHOT</cdap.plugin.version>
-    <data.pipeline.parent>system:cdap-data-pipeline[6.8.0-SNAPSHOT, 7.0.0-SNAPSHOT)</data.pipeline.parent>
-    <data.stream.parent>system:cdap-data-streams[6.8.0-SNAPSHOT, 7.0.0-SNAPSHOT)</data.stream.parent>
+    <cdap.version>6.9.0</cdap.version>
+    <cdap.plugin.version>2.11.0</cdap.plugin.version>
+    <data.pipeline.parent>system:cdap-data-pipeline[6.8.0, 7.0.0-SNAPSHOT)</data.pipeline.parent>
+    <data.stream.parent>system:cdap-data-streams[6.8.0, 7.0.0-SNAPSHOT)</data.stream.parent>
     <hadoop.version>2.10.2</hadoop.version>
     <aws.sdk.version>1.11.133</aws.sdk.version>
     <main.basedir>${project.basedir}</main.basedir>
