--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.cdap.plugin</groupId>
   <artifactId>amazon-s3-plugins</artifactId>
-  <version>1.19.2-SNAPSHOT</version>
+  <version>1.19.2</version>
   <description>Plugins for Amazon S3</description>
   <url>https://github.com/data-integrations/amazon-s3-plugins</url>
 
@@ -75,7 +75,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cdap.version>6.9.0</cdap.version>
+    <cdap.version>6.9.2</cdap.version>
     <cdap.plugin.version>2.11.0</cdap.plugin.version>
     <data.pipeline.parent>system:cdap-data-pipeline[6.8.0-SNAPSHOT, 7.0.0-SNAPSHOT)</data.pipeline.parent>
     <data.stream.parent>system:cdap-data-streams[6.8.0-SNAPSHOT, 7.0.0-SNAPSHOT)</data.stream.parent>
@@ -484,7 +484,7 @@
         <dependency>
           <groupId>io.cdap.tests.e2e</groupId>
           <artifactId>cdap-e2e-framework</artifactId>
-          <version>0.2.0-SNAPSHOT</version>
+          <version>0.2.0</version>
           <scope>test</scope>
         </dependency>
         <dependency>
