--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>13.0.1</version>
+      <version>13.0.2-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
